--- a/components/css/index/style.css
+++ b/components/css/index/style.css
@@ -28,4 +28,35 @@ h2{
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-}   
+}
+
+.botao{
+    border: 1px solid #ef1d26;
+    cursor: pointer;
+    background: none;
+    font-size: 20px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+    color: #ef1d26;
+}
+.botao::before{
+    bottom: 0;
+    border-radius: 50% 50% 0 0;
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: #ef1d26;
+    z-index: -1;
+    transition: 0.8s;
+}
+.botao:hover{
+    color: white;
+}
+.botao:hover::before{
+    height: 180%;
+
+}
+
