--- a/components/css/index/style.css
+++ b/components/css/index/style.css
@@ -5,27 +5,27 @@
 .borda{
     border: ridge;    
     border-color: black;
-    padding-left: 6px;
-    padding-right: 6px;
+    padding-top: 5%;
+    padding-bottom: 6%;
+    padding-left: 7px;
+    padding-right: 7px;    
     border-width: 2px;
-    font-size: 15px;
+    font-size: 20px;
+    line-height: 50px;
 }
 
-.img_uni_logo{
-    height:3.7cm;
-    width:6.47cm;
-}
 
 body{
-    font-size: 12px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-left: 20%;
-    padding-right: 20%;
+    font-family: Arial, Helvetica, sans-serif;    
     text-align:justify;
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto; 
+    background-color: rgb(230, 230, 230); 
 }
 
 h2{
-    font-size: 14px;
+    font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
