--- a/components/css/prontuario/style.css
+++ b/components/css/prontuario/style.css
@@ -1,3 +1,62 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;    
+}
+
+.secao{
+    text-align: justify;
+    float: left;
+    width: 100%
+    
+}
+.secao div div{
+    border: 0.5px solid black;
+    float: left;
+    width: 25%;
+    padding: 10px;
+    margin-left: -1px;
+    margin-bottom: -1px;
+    
+}
+
+/* .quatroColunas{
+    text-align: justify;
+    float: left;
+    width: 100%
+} */
+.secao.quatroColunas div div{
+    border: 0.5px solid black;
+    float: left;
+    width: 20%;
+    padding: 10px;
+    margin-left: -1px;
+    margin-bottom: -1px;
+    
+}
+.secao.duasColunas div div{
+    border: 0.5px solid black;
+    float: left;
+    width: 45%;
+    padding: 10px;
+    margin-left: -1px;
+    margin-bottom: -1px;
+    
+}
+
+
+.dadosEndereco div div{
+    border: 0.5px solid black;
+    float: left;
+    width: 20%;
+}
+
+
+
+
+
+
+
+
+
 table,
 td,
 th {
