--- a/components/css/prontuario/style.css
+++ b/components/css/prontuario/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;    
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .secao{
@@ -18,11 +18,6 @@ body{
     
 }
 
-/* .quatroColunas{
-    text-align: justify;
-    float: left;
-    width: 100%
-} */
 .secao.quatroColunas div div{
     border: 0.5px solid black;
     float: left;
@@ -49,26 +44,19 @@ body{
     width: 20%;
 }
 
-
-
-
-
-
-
-
-
 table,
 td,
 th {
     text-align: center;
-    border: 1px solid black;
+    border: 2px solid black;
     font-weight: normal;
+    padding: 5px;
 }
 
 
 table {
     width: 45%;
-    border-collapse:initial ;
+    
 }
 
 .novoProcedimento{
