--- a/components/css/index/style.css
+++ b/components/css/index/style.css
@@ -2,6 +2,7 @@
 .borda{
     border: ridge;    
     border-color: black;
+    background-color: rgb(255, 253, 253);
     padding-top: 5%;
     padding-bottom: 6%;
     padding-left: 7px;
