--- a/components/css/consultar_paciente/style.css
+++ b/components/css/consultar_paciente/style.css
@@ -1,5 +1,3 @@
-
-
 body{
     font-family: Arial, Helvetica, sans-serif;    
     text-align:justify;
@@ -32,4 +30,14 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 90px;
     background-color: rgb(255, 253, 253);
+}
+
+.botao{
+    border: 1px solid #ef1d26;
+    padding: 10px 20px;
+    background: #ef1d26;
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    position: relative;
 }
