--- a/components/css/prontuario/style.css
+++ b/components/css/prontuario/style.css
@@ -67,3 +67,17 @@ table {
     color: rgb(153, 13, 8);
     transition: 0.5s;
 }
+.botao{
+    border: 1px solid #ef1d26;
+    padding: 10px 20px;
+    margin: 10px;
+    background: #ef1d26;
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    position: relative;
+}
+
+.botao#botaoAdicionar{
+    padding: 2px 12px;
+}
