--- a/components/php/Paginas/prontuario.html
+++ b/components/php/Paginas/prontuario.html
@@ -69,7 +69,7 @@
     </div>
 
     <div id='anamneseTotal' class="invisivel">
-        <button class="botao">Fazer nova Anamnese</button>
+        <button class="botao" id="novaAnamnese">Fazer nova Anamnese</button>
         <div class="secao">
             <div>
                 <h3>Anamnese Geral</h3>
