Botão de exclusão de paciente adicionado

--- a/components/php/Paginas/prontuario.html
+++ b/components/php/Paginas/prontuario.html
@@ -15,6 +15,7 @@
     <button id='botaoDados' class="botao">Dados pessoais</button>
     <button id='botaoAnamnese' class="botaoDesligado">Anamnese</button>
     <button id='botaoProntuario' class="botaoDesligado">Prontuario</button>
+    <button id='excluirPaciente' class="botao">Excluir Paciente</button>
     <div id='dadosPessoaisFisicosEndereco'>
         <h1>Dados do paciente</h1>
         <h3>Dados Pessoais</h3>
@@ -242,6 +243,7 @@
     <script src="/components/js/prontuario/editarCampos.js"></script>
     <script src="/components/js/prontuario/filtrarDados.js"></script>
     <script src="/components/js/prontuario/carregarDados.js"></script>
+    <script src="/components/js/prontuario/excluirPaciente.js"></script>
     <script>
         main();
     </script>
