--- a/components/css/prontuario/style.css
+++ b/components/css/prontuario/style.css
@@ -2,6 +2,58 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*Configuração geral dos conteiners*/
+.conteinerCamposDadosPessoais, .conteinerCamposPais, .conteinerCamposFisicos, .conteinerCamposEndereco{
+    display: flex;
+    flex-wrap: wrap; /*quebra o conteudo quando chega no máximo de largura e/ou altura*/
+    height: 50%; /*tem sempre metade da altura disponivel*/
+}
+/* Configuração geral dos itens */
+.campoItemDadosPessoais, .campoItemPais, .campoItemFisicos, .campoItemEndereco{
+    word-wrap: break-word;
+    border: 0.5px solid black;
+    padding: 10px;
+    margin-left: -1px;
+    margin-bottom: -1px;
+    width: 25%; /*espaço que cada campo possui (quanto mais espaço, menos em cada linha)*/
+}
+
+/* Configuração dos últimos dois itens dos dados pessoais */
+.campoItemDadosPessoais:nth-last-child(-n+2){
+    width: 38.3%;
+}
+
+/* Configuração da tabela Pais */
+.conteinerCamposPais{
+    width: 45%;
+}
+
+.campoItemPais{
+    width: 45%;
+}
+
+/* Configuração da tabela Dados Fisicos */
+
+.conteinerCamposFisicos{
+    width: 30%;
+}
+
+.campoItemFisicos{
+    width: 52%;
+}
+
+/* Configuração da tabela Endereços */
+
+.conteinerCamposEndereco{
+    width: 30%;
+    margin-bottom: 2%;
+}
+
+.campoItemEndereco{
+    width: 52%;
+}
+
+
 .secao{
     text-align: justify;
     float: left;
