--- a/components/css/index/style.css
+++ b/components/css/index/style.css
@@ -23,19 +23,14 @@ body{
 }
 
 button{
-	padding: .5em 2em;
-	border: 0;
-	border-bottom: 3px solid;
-	font-size: 1.2em;
-	cursor: pointer;
-	margin: 0;
-	margin-top: -3px;
-	color: #fff;
-	background-color:#ef1d26;
-	border-color: #4c0a04;
-	width: 20%;
-    display: block;
-    clear: both;
-    margin: 10px 0px;
+    margin-left: 2%;
+	border: 1px solid #ef1d26;
+    border-radius: 7%;
+    padding: 10px 20px;
+    background: #ef1d26;
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    position: relative;
 
 }
