--- a/components/css/consultar_paciente/style.css
+++ b/components/css/consultar_paciente/style.css
@@ -34,6 +34,7 @@ h2{
 
 .botao{
     border: 1px solid #ef1d26;
+    border-radius: 7%;
     padding: 10px 20px;
     background: #ef1d26;
     font-size: 20px;
